Rendering noscript element for users without enabled js

--- a/src/FacebookPixel/templates/commonEvent.latte
+++ b/src/FacebookPixel/templates/commonEvent.latte
@@ -1,3 +1,4 @@
 <script type="text/javascript">
     fbq('track', {$event}{ifset $parameters}, {$parameters|noescape}{/ifset});
 </script>
+<noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id={$id|noescape}&ev=PageView&noscript=1"/></noscript>
