--- a/tests/app/templates/@layout.latte
+++ b/tests/app/templates/@layout.latte
@@ -1,17 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta charset="utf-8">
     <title></title>
 </head>
 
 <body>
 
-{control facebookPixel}
-
 <div class="page-content">
-    {block content}
+    {block content}{/block}
 </div>
+
+{control facebookPixel}
 
 </body>
 </html>
